overflow problem fixed

--- a/static/style.css
+++ b/static/style.css
@@ -1,32 +1,34 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
-*{
-    margin:0;
-    padding:0;
+* {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
-body{
-    font-family: poppins,sans-serif;
-    overflow: hidden;
+body {
+  font-family: poppins, sans-serif;
 }
-a{
+a {
     text-decoration: none;
     list-style-type: none;
     color: aliceblue;
 }
 /* NAV */
-.container{
+.container {
     width: 100%;
     height: 20vh;
     display: flex;
     align-items: center;
-    gap:400px;
-    background-image: linear-gradient(145deg, #171d29,#252e3d,#665f7a);
+    gap: 400px;
+    background-image: linear-gradient(145deg, #171d29, #252e3d, #665f7a);
     color: aliceblue;
+    position: fixed;
+    top: 0;
+    z-index: 99999999;
 }
-.logo{
+.logo {
     display: flex;
-    width:200px;
+    width: 200px;
     justify-content: center;
 }
 .nav {
@@ -34,197 +36,200 @@ a{
     justify-content: center;
     text-align: center;
 }
-.logo img{
-    width:80px;
-    height:75px; 
+.logo img {
+    width: 80px;
+    height: 75px;
 }
 .logo-container {
-    display : flex;
+    display: flex;
     width: 20%;
     justify-content: center;
 }
 
 /* Content */
-.content{
+.content {
     display: flex;
-    height : 100%;
+    height: 100vh;
 }
 
 /* Menu */
-.menu{
+.menu {
     display: flex;
-    height: 100vh;
+    height: 100%;
     width: 20%;
     justify-content: center;
     text-align: center;
-    padding-top: 20px;
-    background-color: #202938;   
+    padding-top: 15%;
+    background-color: #202938;
+    position: fixed;
 }
-.menu li{
-    list-style-type: none;
-    padding: 10px;
-    border-radius: 5px;
-    color:aliceblue
+.menu li {
+  list-style-type: none;
+  padding: 10px;
+  border-radius: 5px;
+  color: aliceblue;
 }
-.menu li:hover{
-    background-color:#665f7a ;
-    cursor: pointer;
-    font-weight: bold;
-    transition: background-color 0.5s ease-in-out;
+.menu li:hover {
+  background-color: #665f7a;
+  cursor: pointer;
+  font-weight: bold;
+  transition: background-color 0.5s ease-in-out;
 }
 
 /* MAIN CONTENT */
-.main{
-    display : block;
-    margin: auto;
-    padding-top: 10%;
-    width : 100vh;
-    height : 100vh;
-    justify-content: center;
-    text-align: center;
+.main {
+  display: block;
+  margin: auto;
+  padding-top: 20%;
+  padding-left: 20%;
+  height: 100vh;
+  text-align: center;
 }
-.main h3{
-    padding: 10px;
+.main h3 {
+  padding: 10px;
 }
-.main p{
-    padding: 10px;
+.main p {
+  padding: 10px;
 }
-.btn{
-    margin: 10px;
-    padding: 10px;
-    border-radius:5px;
-    display: inline;
-    background-color: #202938;
-    color: aliceblue;
-    font-weight: 600;
+.btn {
+  margin: 10px;
+  padding: 10px;
+  border-radius: 5px;
+  display: inline;
+  background-color: #202938;
+  color: aliceblue;
+  font-weight: 600;
 }
-.btn:hover{
-    background-color: #665f7a;
-    cursor: pointer;
-    transition: background-color 0.3s ease-in-out;
+.btn:hover {
+  background-color: #665f7a;
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
 }
-.btn-submit{
-    width:1050px;
-    margin: 10px;
-    padding: 10px;
-    border-radius:5px;
-    display: inline;
-    background-color: #1e5e28;
-    color: aliceblue;
-    font-weight: 600;
+.btn-submit {
+  width: 1050px;
+  margin: 10px;
+  padding: 10px;
+  border-radius: 5px;
+  display: inline;
+  background-color: #1e5e28;
+  color: aliceblue;
+  font-weight: 600;
 }
-.btn-submit:hover{
-    background-color: #665f7a;
-    cursor: pointer;
-    transition: background-color 0.3s ease-in-out;
+.btn-submit:hover {
+  background-color: #665f7a;
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
 }
 .main-behaviour {
-    display: flex;
-    flex-direction: column;
-    width : 100%;
-    height : 100vh;
-    padding-left : 20%;
-    overflow: auto;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100vh;
+  padding-top : 10%;
+  padding-left: 20%;
 }
-.main-behavior h2{
-    margin:30px;
+.main-behaviour h2 {
+  margin: 30px;
 }
 
 /*FILE UPLOAD*/
 .file-drop-area {
-    position: relative;
-    display: flex;
-    align-items: center;
-    width: 1050px;
-    height: 200px;
-    max-width: 100%;
-    left: 10px;
-    padding: 25px;
-    border: 1px dashed rgba(174, 9, 9, 0.758);
-    border-radius: 3px;
-    transition: 0.2s;
-    &:active {
-        background-color: rgba(255, 255, 255, 0.05);
-    }
+  position: relative;
+  display: flex;
+  align-items: center;
+  width: 1050px;
+  height: 200px;
+  max-width: 100%;
+  left: 10px;
+  padding: 25px;
+  border: 1px dashed rgba(174, 9, 9, 0.758);
+  border-radius: 3px;
+  transition: 0.2s;
+  &:active {
+    background-color: rgba(255, 255, 255, 0.05);
+  }
 }
 .fake-btn {
-    flex-shrink: 0;
-    background-color: rgba(255, 255, 255, 0.04);
-    border: 1px solid rgba(238, 29, 29, 0.1);
-    border-radius: 3px;
-    padding: 8px 15px;
-    margin-right: 10px;
-    font-size: 12px;
-    text-transform: uppercase;
+  flex-shrink: 0;
+  background-color: rgba(255, 255, 255, 0.04);
+  border: 1px solid rgba(238, 29, 29, 0.1);
+  border-radius: 3px;
+  padding: 8px 15px;
+  margin-right: 10px;
+  font-size: 12px;
+  text-transform: uppercase;
 }
 .file-msg {
-    font-size: small;
-    font-weight: 300;
-    line-height: 1.4;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
+  font-size: small;
+  font-weight: 300;
+  line-height: 1.4;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .file-input {
-    position: absolute;
-    left: 0;
-    top: 0;
-    height: 100%;
-    width: 100%;
-    cursor: pointer;
-    opacity: 0;
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  cursor: pointer;
+  opacity: 0;
 }
 
 /*ANOMALY RESULT*/
 .video-result {
-    display: flex;
-    flex-direction: column;
-    width : 100vh;
-    padding-top: 20px;
-    justify-content : center;
-    align-items : center;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding-top: 20px;
+  justify-content: center;
+  align-items: center;
 }
 .picture-result {
-    display: flex;
-    flex-direction: column;
-    width : 100vh;
-    padding-top: 30px;
-    justify-content : center;
-    align-items : center;
-}
-.table-result {
-    display: flex;
-    flex-direction: column;
-    width : 100vh;
-    padding-top: 20px;
-    justify-content : center;
-    align-items : center;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding-top: 30px;
+  justify-content: center;
+  align-items: center;
 }
 .slideshow-container {
-    max-width: 1000px;
-    position: relative;
-    margin: auto;
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
 }
 .mySlides {
-    display: none;
+  display: none;
 }
 .numbertext {
-    color: #f2f2f2;
-    font-size: 12px;
-    padding: 8px 12px;
-    position: absolute;
-    top: 0;
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
 }
 .dot {
-    cursor: pointer;
-    height: 15px;
-    width: 15px;
-    margin: 0 2px;
-    background-color: #bbb;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.6s ease;
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
 }
 .graph {
-    vertical-align: middle;
+  vertical-align: middle;
+}
+.table-result {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding-top: 30px;
+  justify-content: center;
+  align-items: center;
+}
+.extras {
+  height: 100px;
 }
